# LETI-share

Common/Gerich/: титульник сагайдаковский.docx  титульник сычев.docx
Programming/CPP-1-semester/FirstLaba/Version1/: main.cpp
Programming/CPP-1-semester/FirstLaba/Version2/: main.cpp  Отчет_по_лабораторной_1_win.docx
Programming/CPP-1-semester/FirstLaba/Version3/: main.cpp
Programming/CPP-1-semester/SecondLaba/Version1/: main.cpp
Programming/CPP-1-semester/SecondLaba/Version2/: main.cpp
Programming/CPP-1-semester/SecondLaba/Version3/: main.cpp
Programming/CPP-2-semester/Course/: CMakeLists.txt
Programming/CPP-2-semester/Course/diamond/: diamond_engine.cpp  diamond_engine.h  main.cpp  report.docx
Programming/CPP-2-semester/Course/lab1/: lab1.in  lab1_report.docx  main.cpp
Programming/CPP-2-semester/Course/lab2/: lab2_report.docx  main.cpp  ~$b2_report.docx
Programming/CPP-2-semester/Course/nx/: logger.cpp  logger.h  marker_string.cpp  marker_string.h  nx_forward_list.h  nx_iostream.cpp  nx_iostream.h  nx_list.h  nx_string.h  nx_string_extension.cpp  nx_string_extension.h  nx_type_traits.h  nx_vector.cpp  nx_vector.h
Programming/CPP-2-semester/Test/: Test.docx
Programming/CPP/FirstLaba/Version1/: main.cpp  Отчет_по_практике_1_win.docx
Programming/CPP/FirstLaba/Version2/: main.cpp
Programming/CPP/FirstLaba/Version3/: main.cpp
Programming/CPP/SecondLaba/Version1/: Sheet1.xlsx  main.cpp  Отчет_по_практике_2_win.docx
Programming/CPP/SecondLaba/Version2/: main.cpp  ~$чет_по_лабораторной_2_win.docx  Отчет_по_лабораторной_2_win.docx
(+1 files in other folders)
